fixed a bug that caused orders table to be too close together

--- a/client/style/orders.css
+++ b/client/style/orders.css
@@ -46,8 +46,15 @@ table {
     font-size: 1.5em;
 }
 
+#selling-list {
+    margin-top: 5em;
+}
+
 @media (min-width: 1080px) {
     #orders-wrapper {
         flex-flow: row;
+    }
+    #selling-list {
+        margin-top: 0;
     }
 }
